Revert "refactor: edited layout and contents of header and footer, fixed SearchHero components spacing gaps"
This reverts commit f26e16d5625fe36a9ad62c0498659a0377bcfed1.

--- a/client/src/components/global/footer.css
+++ b/client/src/components/global/footer.css
@@ -148,7 +148,6 @@
     max-width: 1400px;
     margin: 0 auto;
     padding: 0 24px;
-    margin-bottom: -40px;
 }
 
 .footer-content {
